syntax = "proto3";

option go_package = "./stubs";
      

message BasicErrorMessage {
    string message = 1;
}